tests/should_fail/unknown_type.nds
-- Unknown type name in `as` cast.
set x to 1 as wibblewop
